# NDKStudy

./: README.md
d12_jni/: settings.gradle
d12_jni/app/: build.gradle
d12_jni/app/src/androidTest/java/com/cnting/jni/: ExampleInstrumentedTest.kt
d12_jni/app/src/main/: AndroidManifest.xml
d12_jni/app/src/main/cpp/: CMakeLists.txt  JNIEnv原理流程.c  native-lib.cpp
d12_jni/app/src/main/java/com/cnting/jni/: MainActivity.kt  Person.kt  Point.kt
d12_jni/app/src/main/res/layout/: activity_main.xml
d12_jni/app/src/main/res/values/: strings.xml  themes.xml
d12_jni/app/src/main/res/values-night/: themes.xml
d12_jni/app/src/test/java/com/cnting/jni/: ExampleUnitTest.kt
d12_jni/gradle/wrapper/: gradle-wrapper.properties
d14_parcel/: settings.gradle
d14_parcel/app/: build.gradle
d14_parcel/app/src/androidTest/java/com/cnting/parcel/: ExampleInstrumentedTest.kt
d14_parcel/app/src/main/: AndroidManifest.xml
d14_parcel/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
d14_parcel/app/src/main/java/com/cnting/parcel/: MainActivity.kt  Parcel.kt
d14_parcel/app/src/main/res/values/: strings.xml  themes.xml
d14_parcel/app/src/main/res/values-night/: themes.xml
d14_parcel/app/src/test/java/com/cnting/parcel/: ExampleUnitTest.kt
d14_parcel/gradle/wrapper/: gradle-wrapper.properties
d1_md5/: settings.gradle
d1_md5/app/: build.gradle
d1_md5/app/src/androidTest/java/com/cnting/md5/: ExampleInstrumentedTest.kt
d1_md5/app/src/main/: AndroidManifest.xml
d1_md5/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
d1_md5/app/src/main/java/com/cnting/md5/: MainActivity.kt  MyApp.kt  SignatureUtils.kt
d1_md5/app/src/main/res/values/: strings.xml  themes.xml
d1_md5/app/src/main/res/values-night/: themes.xml
d1_md5/app/src/test/java/com/cnting/md5/: ExampleUnitTest.kt
d1_md5/gradle/wrapper/: gradle-wrapper.properties
d31_ocr/: .gitignore  README.md  settings.gradle
d31_ocr/app/: build.gradle
d31_ocr/app/src/androidTest/java/com/cnting/ocr/: ExampleInstrumentedTest.kt
d31_ocr/app/src/main/: AndroidManifest.xml
d31_ocr/app/src/main/cpp/: BitmapMatUtil.cpp  BitmapMatUtil.h  CMakeLists.txt  CardOcr.cpp  CardOcr.h  native-lib.cpp
d31_ocr/app/src/main/java/com/cnting/ocr/: BankCardOcr.kt  MainActivity.kt
d31_ocr/app/src/main/res/layout/: activity_main.xml
d31_ocr/app/src/main/res/values/: strings.xml  themes.xml
d31_ocr/app/src/main/res/values-night/: themes.xml
d31_ocr/app/src/test/java/com/cnting/ocr/: ExampleUnitTest.kt
d31_ocr/gradle/wrapper/: gradle-wrapper.properties
d3_ffmpeg/: README.md  settings.gradle
d3_ffmpeg/app/: build.gradle
d3_ffmpeg/app/src/androidTest/java/com/cnting/ffmpeg/: ExampleInstrumentedTest.kt
d3_ffmpeg/app/src/main/: AndroidManifest.xml
d3_ffmpeg/app/src/main/cpp/: CMakeLists.txt  CTAudio.cpp  CTAudio.h  CTFFmpeg.cpp  CTFFmpeg.h  CTJNICall.cpp  CTJNICall.h  CTPacketQueue.h  constants.h  music-player.cpp  native-lib.cpp
d3_ffmpeg/app/src/main/cpp/ffmpeg/: config.h
d3_ffmpeg/app/src/main/java/com/cnting/ffmpeg/: MainActivity.kt  VideoCompress.kt
d3_ffmpeg/app/src/main/res/layout/: activity_main.xml
d3_ffmpeg/app/src/main/res/values/: strings.xml  themes.xml
d3_ffmpeg/app/src/main/res/values-night/: themes.xml
d3_ffmpeg/app/src/test/java/com/cnting/ffmpeg/: ExampleUnitTest.kt
d3_ffmpeg/gradle/wrapper/: gradle-wrapper.properties
d3_ffmpeg/shell/: build_android.sh
d5_opencv/: README.md  settings.gradle
d5_opencv/app/: build.gradle
d5_opencv/app/src/androidTest/java/com/cnting/opencv/: ExampleInstrumentedTest.kt
d5_opencv/app/src/main/: AndroidManifest.xml
d5_opencv/app/src/main/cpp/: CMakeLists.txt  NativeMat.cpp  NativeUtil.cpp  bitmap_utils.cpp  bitmap_utils.h  native-lib.cpp
d5_opencv/app/src/main/java/com/cnting/opencv/: BitmapUtil.kt  FaceDetection.kt  FaceDetectionActivity.kt  FactDetectionActivity.kt  FilterActivity.kt  MainActivity.kt  ObjDetectActivity.kt  ObjDetectUtil.kt  SpecialEffectActivity.kt  (+1 more)
d5_opencv/app/src/main/res/layout/: activity_detect.xml  activity_face_detection.xml  activity_filter.xml  activity_main.xml  activity_special_effect.xml  activity_transform.xml
d5_opencv/app/src/main/res/values/: strings.xml  themes.xml
d5_opencv/app/src/main/res/values-night/: themes.xml
d5_opencv/gradle/wrapper/: gradle-wrapper.properties
d5_opencv/opencv/: build.gradle
d5_opencv/opencv/src/main/: AndroidManifest.xml
d5_opencv/opencv/src/main/aidl/org/opencv/: OpenCVEngineInterface.aidl
d93_opensles/: settings.gradle
d93_opensles/app/: build.gradle
d93_opensles/app/src/main/: AndroidManifest.xml
d93_opensles/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
d93_opensles/app/src/main/res/values/: strings.xml  themes.xml
d93_opensles/app/src/main/res/values-night/: themes.xml
d93_opensles/gradle/wrapper/: gradle-wrapper.properties
d95_videoplayer/: README.md  settings.gradle
d95_videoplayer/app/: build.gradle
d95_videoplayer/app/src/main/: AndroidManifest.xml
d95_videoplayer/app/src/main/cpp/: CMakeLists.txt  CTAudio.cpp  CTAudio.h  CTFFmpeg.cpp  CTFFmpeg.h  CTJNICall.cpp  CTJNICall.h  CTMedia.cpp  CTMedia.h  CTPacketQueue.cpp  CTPlayerStatus.cpp  CTPlayerStatus.h  CTVideo.cpp  CTVideo.h  constants.h  video-player.cpp
d95_videoplayer/app/src/main/res/layout/: activity_main.xml
d95_videoplayer/app/src/main/res/values/: strings.xml  themes.xml
d95_videoplayer/app/src/main/res/values-night/: themes.xml
d95_videoplayer/gradle/wrapper/: gradle-wrapper.properties
d97_livepush/: README.md  settings.gradle
d97_livepush/app/: build.gradle
d97_livepush/app/src/main/: AndroidManifest.xml
d97_livepush/app/src/main/cpp/: CMakeLists.txt  CTJNICall.cpp  CTJNICall.h  CTLivePush.cpp  CTLivePush.h  CTPacketQueue.cpp  CTPacketQueue.h  constants.h  native-lib.cpp
d97_livepush/app/src/main/res/layout/: activity_livepush.xml  activity_main.xml  activity_video_record.xml
d97_livepush/app/src/main/res/values/: strings.xml  themes.xml
d97_livepush/app/src/main/res/values-night/: themes.xml
d97_livepush/gradle/wrapper/: gradle-wrapper.properties
(+40 files in other folders)
